# Onnx_Rust_Web_Assembly_Triton_Promethus_Grafana

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.sh  docker-compose.yml  grafana.json  license.txt  prometheus.yml  requirements.txt
app/: main.py
model_repository/onnx_wasm_model/: config.pbtxt
src/: lib.rs
