
[package]
name = "onnx-wasm-inference"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# Use specific versions that work together
tract-onnx = "0.18.5"  # Version known to work with WASM
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"

# Liquid template engine (all versions must match)
liquid = "0.26.0"
liquid-core = "0.26.0"
liquid-derive = "0.26.0"
liquid-lib = "0.26.0"

# WASM-specific dependencies
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
wee_alloc = "0.4.5"  # Optional but recommended